--- a/новый 1.html
+++ b/новый 1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-  </head>
-  <body>
-    <h1>Всем привет, я Юля!</h1>
-  </body>
+<head>
+<title>JULIASITE</title>
+<meta charset="utf-8">
+</head>
+<body>
+<h1>Всем привет,я Юля!</h1>
+</body>
 </html>
